--- a/fusionflare/templates/register.html
+++ b/fusionflare/templates/register.html
@@ -81,6 +81,19 @@
                 {% endif %}
             </div>
             <div>
+                {% if form.accept_privacy.errors %}
+                    {{ form.accept_privacy(class="register-privacy") }} <p class="register-privacy-label">Elfogadom a</p> <a class="register-privacy-label-link" href="{{ url_for('privacy')}}">felhasználói feltételeket</a>
+                    <div class="error-code">
+                        {% for error in form.accept_privacy.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.accept_privacy(class="register-privacy") }} <p class="register-privacy-label">Elfogadom a</p> <a class="register-privacy-label-link" href="{{ url_for('privacy')}}">felhasználói feltételeket</a>
+                {% endif %}
+            </div>
+
+            <div>
                 {{ form.submit(class="register-button") }}
             </div>
         </form>
