Bővült a privacy rész

--- a/fusionflare/templates/privacy.html
+++ b/fusionflare/templates/privacy.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1 class="privacy-title">FusionFlare Privacy</h1>
+    <ul>
+        <li style="font-size: 18px;">
+            Ön, elfogadja azt, hogy az e-mail címét felhasználjuk, csakis arra, hogy információkat közöljünk önnel. Például: Regisztrációkor kap egy olyan levelet, amiben megtalálja a kártyaszámát. Kérjük ezt kezelje bizalmasan!
+            Ha valaki bejelentkezik a fiókjába, kap egy levelet erről és, ha illetéktelen jelentkezik be, akkor megváltoztathatja a jelszavát.
+            Ahhoz, hogy jelszóváltási kérelmet tudjon igényelni, szükségünk van az e-mail címére, amire megkapja a jelszóváltási levelet és linket. Kérjük, ezt a linket kezelje nagyon bizalmasan, a fiókja érdekében!
+        </li>
 
+        <li style="font-size: 18px;">
+            Ha véletlenül rossz kártyaszámra utalt, ezt a bank NEM tudja visszatéríteni, mivel ez a maga felelőssége! Kérjük, nézze meg akár kétszer is azt, hogy hová és kinek utal!
+        </li>
+        <li style="font-size: 18px;">
+            A bank nagy biztonságba tartja a jelszavait, ezét kérjük, hogy maga is tartsa azokat biztonságban. Ne adja meg másoknak, csak azoknak akikben megbízik!
+            NEM vállalunk felelősséget olyan csalások után, amelyek maga miatt mentek végbe. Például: Egy olyan embernek adta meg a jelszavát, aki utánna visszaélt ezzel.
+        </li>
+        <li style="font-size: 18px;">
+            Felelősséget vállalunk olyan csalások után, amelyek a banki rendszer felkészültlensége vagy a rendszergazda felelőtlensége miatt történtek. Például: Egy hacker betör a rendszerbe és valamilyen kárt tesz abban, vagy a számlájában.
+        </li>
+    </ul>
 </body>
 </html>
