--- a/fusionflare/templates/privacy.html
+++ b/fusionflare/templates/privacy.html
@@ -12,7 +12,7 @@
         <li style="font-size: 18px;">
             Ön, elfogadja azt, hogy az e-mail címét felhasználjuk, csakis arra, hogy információkat közöljünk önnel. Például: Regisztrációkor kap egy olyan levelet, amiben megtalálja a kártyaszámát. Kérjük ezt kezelje bizalmasan!
             Ha valaki bejelentkezik a fiókjába, kap egy levelet erről és, ha illetéktelen jelentkezik be, akkor megváltoztathatja a jelszavát.
-            Ahhoz, hogy jelszóváltási kérelmet tudjon igényelni, szükségünk van az e-mail címére, amire megkapja a jelszóváltási levelet és linket. Kérjük, ezt a linket kezelje nagyon bizalmasan, a fiókja érdekében!
+            Ahhoz, hogy jelszóváltási kérelmet tudjon igényelni, szükségünk van az e-mail címére, amire megkapja a jelszóváltási levelet és linket. Kérjük, ezt a linket kezelje nagyon bizalmasan, a fiókja védelme érdekében!
         </li>
 
         <li style="font-size: 18px;">
