--- a/fusionflare/templates/register.html
+++ b/fusionflare/templates/register.html
@@ -89,7 +89,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.accept_privacy(class="register-privacy") }} <p class="register-privacy-label">Elfogadom a</p> <a class="register-privacy-label-link" href="{{ url_for('privacy')}}">felhasználói feltételeket</a>
+                    {{ form.accept_privacy(class="register-privacy") }} <p class="register-privacy-label">Elfogadom a</p> <a class="register-privacy-label-link" href="{{ url_for('privacy')}}" target="_blank">felhasználói feltételeket</a>
                 {% endif %}
             </div>
 
