--- a/fusionflare/static/style.css
+++ b/fusionflare/static/style.css
@@ -202,3 +202,46 @@ body {
     font-size: 32px;
     text-align: center;
 }
+
+
+.security-title {
+    text-align: center;
+}
+
+.security-form {
+    position: absolute;
+    left: 35%;
+    top: 30%;
+}
+
+
+.security-background {
+    height: 200px;
+    width: 600px;
+}
+
+
+.security-password-background {
+    position: relative;
+    text-align: center;
+    top: 10%;
+}
+
+.security-submit-background {
+    position: relative;
+    text-align: center;
+    top: 20%;
+}
+
+.security-password {
+    width: 300px;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+.security-submit {
+    width: 200px;
+    font-size: 20px;
+    border-radius: 8px;
+}
