--- a/fusionflare/templates/new_password.html
+++ b/fusionflare/templates/new_password.html
@@ -6,19 +6,21 @@
 
     <h1 style="text-align: center;">Jelszóváltás</h1>
 
-    <form action="" method="post">
+    <form class="new-password-form" action="" method="post">
         {{ form.hidden_tag() }}
         <div>
-            {{ form.old_password() }}
-        </div>
-        <div>
-            {{ form.new_password() }}
-        </div>
-        <div>
-            {{ form.new_password_confirm() }}
-        </div>
-        <div>
-            {{ form.submit() }}
+            <div class="new-password-old">
+                {{ form.old_password(class="old-password") }}
+            </div>
+            <div class="new-password-new">
+                {{ form.new_password(class="new-password") }}
+            </div>
+            <div class="new-password-new-confirm">
+                {{ form.new_password_confirm(class="new-password-confirm") }}
+            </div>
+            <div class="new-password-submit">
+                {{ form.submit(class="new-submit") }}
+            </div>
         </div>
     </form>
 
