--- a/fusionflare/templates/index.html
+++ b/fusionflare/templates/index.html
@@ -27,6 +27,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('new_password_request') }}">Jelszó váltás</a>
+              </li>
+            {% endif %}
           </ul>
           <div class="d-flex">
             {% if current_user.is_authenticated %}
