--- a/fusionflare/templates/new_password_request.html
+++ b/fusionflare/templates/new_password_request.html
@@ -7,7 +7,7 @@
 
 
     <form action="" method="post">
-        <button type="submit" style="position: absolute; left: calc(50% - 100px); top: calc(50% - 100px);">Kérelmezés</button>
+        <button type="submit" style="position: absolute; left: calc(50% - 150px); top: calc(50% - 100px); font-size: 46px; border-radius: 10px;">Kérelmezés</button>
     </form>
 
 {% endblock content %}
