--- a/fusionflare/static/style.css
+++ b/fusionflare/static/style.css
@@ -3,6 +3,15 @@ body {
 }
 
 
+#login-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 
 .login-rect, .register-rect {
     border: 3px solid black;
@@ -19,7 +28,7 @@ body {
 .login-title {
     font-style: italic;
     font-size: 32px;
-    color: black;
+    color: white;
     text-align: center;
 }
 
@@ -81,6 +90,14 @@ body {
 }
 
 
+#register-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
 
 .register-title {
     font-style: italic;
@@ -295,6 +312,15 @@ body {
     user-select: none;
 }
 
+.information-balance {
+    position: absolute;
+    font-size: 24px;
+    color: white;
+    right: 35%;
+    top: 80%;
+    user-select: none;
+}
+
 
 .new-password-form {
     position: absolute;
@@ -321,4 +347,64 @@ body {
 
 .new-password-submit {
     transform: translateX(50px);
+}
+
+
+.transfer-panel {
+    position: absolute;
+    width: 700px;
+    height: 200px;
+    top: calc(50% - 150px);
+    left: calc(50% - 300px);
+}
+
+.transfer-card-number-item, .transfer-cvc-code-item, .transfer-to-card-number-item, .transfer-money-item, .transfer-submit-item {
+    margin-bottom: 20px;
+}
+
+.transfer-card-number {
+    position: absolute;
+    top: 10%;
+    left: 10%;
+    width: 300px;
+    font-size: 22px;
+    border-radius: 10px;
+}
+
+.transfer-cvc-code {
+    position: absolute;
+    top: 10%;
+    left: calc(55% - 15px);
+    width: 100px;
+    font-size: 22px;
+    border-radius: 10px;
+}
+
+
+.transfer-to-card-number {
+    position: absolute;
+    top: 35%;
+    left: 10%;
+    font-size: 22px;
+    border-radius: 10px;
+    width: 400px;
+}
+
+.transfer-money {
+    position: absolute;
+    top: 60%;
+    left: 10%;
+    font-size: 22px;
+    border-radius: 10px;
+    width: 150px;
+}
+
+
+.transfer-submit {
+    position: absolute;
+    top: 60%;
+    left: 35%;
+    font-size: 22px;
+    border-radius: 10px;
+    width: 200px;
 }
