--- a/fusionflare/templates/index.html
+++ b/fusionflare/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='bank_icon.ico') }}">
     <title>FusionFlare - {{ title }}</title>
 </head>
 <body>
@@ -30,6 +31,9 @@
             {% if current_user.is_authenticated %}
               <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('new_password_request') }}">Jelszó váltás</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('transfer')}}">Utalás</a>
               </li>
             {% endif %}
           </ul>
