--- a/fusionflare/static/style.css
+++ b/fusionflare/static/style.css
@@ -102,7 +102,7 @@ body {
 .register-title {
     font-style: italic;
     font-size: 32px;
-    color: #00a6ff;
+    color: white;
     text-align: center;
 }
 
