--- a/fusionflare/templates/register.html
+++ b/fusionflare/templates/register.html
@@ -6,7 +6,7 @@
 
     {% block content %}
 
-        <img id="register-background" src="{{ url_for('static', filename='register_background.png') }}" alt="background">
+        <img id="register-background" src="{{ url_for('static', filename='gif.gif') }}" alt="background">
 
         <form class="register-rect" action="" method="post">
             {{ form.hidden_tag() }}
